--- a/index.html
+++ b/index.html
@@ -3,55 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <title>PathoMetabo</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>🧬 PathoMetabo</h1>
-<p><b>Biochemistry-based disease → pathway → treatment explorer</b></p>
+  <h1>🧬 PathoMetabo</h1>
+  <p>Biochemistry-based disease → pathway → treatment explorer</p>
 
-<select id="diseaseSelect">
-  <option value="">Select Disease</option>
-  <option value="diabetes">Diabetes Mellitus</option>
-  <option value="pku">Phenylketonuria</option>
-  <option value="gout">Gout</option>
-  <option value="galactosemia">Galactosemia</option>
-  <option value="hypertension">Hypertension</option>
-  <option value="gallstone">Gallstones</option>
-  <option value="kidneystone">Kidney Stones</option>
-  <option value="asthma">Bronchial Asthma</option>
-  <option value="copd">COPD</option>
-</select>
+  <!-- Disease selector -->
+  <select id="diseaseSelect">
+    <option value="">-- Select Disease --</option>
+    <option value="diabetes">Diabetes Mellitus</option>
+    <option value="asthma">Asthma</option>
+    <option value="copd">COPD</option>
+    <option value="gout">Gout</option>
+    <option value="hypertension">Hypertension</option>
+    <option value="kidneystone">Kidney Stone</option>
+    <option value="gallstone">Gall Stone</option>
+    <option value="pku">Phenylketonuria</option>
+    <option value="galactosemia">Galactosemia</option>
+  </select>
 
-<button onclick="loadDisease()">Load</button>
+  <button onclick="loadDisease()">Load</button>
 
-<hr>
+  <hr>
 
-<h2 id="name"></h2>
+  <!-- Output section -->
+  <h2 id="name"></h2>
 
-<div class="card"><b>Primary Defect:</b> <span id="defect"></span></div>
-<div class="card"><b>Affected Pathway:</b> <span id="pathway"></span></div>
+  <h3>Primary Defect</h3>
+  <p id="defect"></p>
 
-<div class="card">
-<b>Metabolic / Pathophysiological Consequences:</b>
-<ul id="consequences"></ul>
-</div>
+  <h3>Affected Pathway</h3>
+  <p id="pathway"></p>
 
-<div class="card">
-<b>Diagnostic Tests:</b>
-<ul id="tests"></ul>
-</div>
+  <h3>Metabolic / Pathophysiological Consequences</h3>
+  <ul id="consequences"></ul>
 
-<div class="card">
-<b>Usual Medicines (Mechanism-based):</b>
-<ul id="medicines"></ul>
-</div>
+  <h3>Diagnostic Tests</h3>
+  <ul id="tests"></ul>
 
-<div class="card">
-<b>Prevention / Protection:</b>
-<ul id="prevention"></ul>
-</div>
+  <h3>Usual Medicines (Mechanism-based)</h3>
+  <ul id="medicines"></ul>
 
-<script src="js/app.js"></script>
+  <h3>Prevention / Protection</h3>
+  <ul id="prevention"></ul>
+
+  <!-- JS -->
+  <script src="app.js"></script>
+
 </body>
 </html>
