--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>🧬 PathoMetabo</h1>
+  <h1> PathoMetabo</h1>
   <p>Biochemistry-based disease → pathway → treatment explorer</p>
 
   <!-- Disease selector -->
